<resources>
    <string name="app_name">CryptoTime</string>
    <string name="symbols_template">%s/%s</string>
    <string name="last_update_template">Время последнего обновления: %s</string>
    <string name="coin_image">coin image</string>
    <string name="coin_price">Цена:</string>
    <string name="coin_min_price_label">Минимальная цена:</string>
    <string name="coin_max_price_label">Максимальная цена:</string>
    <string name="coin_last_market_label">Последняя сделка:</string>
    <string name="coin_last_update_label">Обновлено:</string>
    <string name="coin_fsym_tsym">/</string>
    <string name="main_menu_top_30_title">Топ 30</string>
    <string name="main_menu_favorite_title">Избранное</string>
    <string-array name="sortCategories">
        <item>По убыванию</item>
        <item>По возрастанию</item>

    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Вход</string>
    <string name="login_title">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="app_logo">app logo</string>
    <string name="lets_registrate">Нет аккаунта? Зарегистрируйся!</string>
    <string name="button_title">Button</string>
    <string name="registration_btn_title">Зарегистрироваться</string>
    <string name="id_wallet_title">ID кошелька</string>
    <string name="email_title">Email</string>
    <string name="password_retry_title">Повторите пароль</string>
    <string name="password_title">Пароль</string>
    <string name="main_menu_profile_profile">Профиль</string>
    <string name="main_menu_wallet_title">Кошелёк</string>
    <string name="usdt">Баланс \n USDT:</string>
    <string name="favourite_title">Избранное</string>

</resources>
