<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/main_menu_group">
        <item
            android:id="@+id/main_menu_profile"
            android:title="@string/main_menu_profile_profile"
            app:showAsAction="never" />
        <item
            android:id="@+id/main_menu_wallet"
            android:title="@string/main_menu_wallet_title"
            app:showAsAction="never" />
        <item
            android:id="@+id/main_menu_top_30_cat"
            android:title="@string/main_menu_top_30_title"
            app:showAsAction="never" />
        <item
            android:id="@+id/main_menu_fav_cat"
            android:title="@string/main_menu_favorite_title"
            app:showAsAction="never" />
    </group>
</menu>